--- a/css/main.css
+++ b/css/main.css
@@ -67,3 +67,30 @@ div#stage {
 	background-position: center;
 	/* border: 2px solid red; */
 }
+
+.btnbox{
+				width: 200px;
+				height: 300px;
+				/* background-color: orange; */
+				display: flex;
+				flex-direction: column;
+				justify-content: space-evenly;
+				align-items: center;
+				position: fixed;
+			}
+.btnbox button{
+				width: 100px ;
+				height: 50px;
+				font-size: 23px;
+				background-color: orange;
+				color: aliceblue;
+				border-radius: 30%;
+			}
+			
+html,body{
+				height: 100%;
+		}
+body{
+				background: url("../img/1.jpg") no-repeat;
+				background-size: cover;
+		}			
